Add GET all campaigns and questionnaires endpoints